# docs/swagger.json
@@ -17,7 +17,35 @@
     "host": "127.0.0.1:3005/api/v1",
     "basePath": "/",
     "paths": {
-        "/account/{id}": {
+        "/account/create": {
+            "post": {
+                "description": "create a account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "create a account",
+                "parameters": [
+                    {
+                        "description": "User",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/serializers.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/account/read/{id}": {
             "get": {
                 "description": "get string by ID",
                 "consumes": [
@@ -44,16 +72,16 @@
                 }
             }
         },
-        "/user/create": {
-            "post": {
-                "description": "create a account",
+        "/account/update/{id}": {
+            "put": {
+                "description": "update a account",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "create a account",
+                "summary": "update a account",
                 "parameters": [
                     {
                         "description": "User",
@@ -63,6 +91,13 @@
                         "schema": {
                             "$ref": "#/definitions/serializers.User"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "User.ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
